--- a/PokeDex_Info/web/src/app/globals.css
+++ b/PokeDex_Info/web/src/app/globals.css
@@ -2,14 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Futura:wght@400;500;700&display=swap');
+
 html {
   scroll-behavior: smooth;
+  font-family: 'Futura', 'Century Gothic', 'Trebuchet MS', sans-serif;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Futura', 'Century Gothic', 'Trebuchet MS', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
