--- a/PokeDex_Info/web/src/app/globals.css
+++ b/PokeDex_Info/web/src/app/globals.css
@@ -2,15 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Futura:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Futura:wght@400;500;700&display=swap");
 
 html {
   scroll-behavior: smooth;
-  font-family: 'Futura', 'Century Gothic', 'Trebuchet MS', sans-serif;
+  font-family: "Futura", "Century Gothic", "Trebuchet MS", sans-serif;
 }
 
 body {
-  font-family: 'Futura', 'Century Gothic', 'Trebuchet MS', sans-serif;
+  font-family: "Futura", "Century Gothic", "Trebuchet MS", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
